src/layouts/base.css
html {
  font-size: 18px;
  color: #0a0a0a;
  font-weight: lighter;
  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
  font-kerning: normal;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-device-width: 480px) {
  html {
    font-size: 16px;
  }
}

.content-wrapper {
  margin: 0 auto;
  max-width: 740px;
  padding-left: 20px;
  padding-right: 20px;
}

@media only screen and (max-device-width: 480px) {
  .content-wrapper {
    padding-left: .8rem;
    padding-right: .8rem;
  }
}

.date-text {
  font-weight: 500;
  color: #666;
}

a {
  color: #0a0a0a;
}

li {
  line-height: 1.8em;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  letter-spacing: 0.04em;
  line-height: 1.5em;
  margin-top: 16px;
  margin-bottom: 16px;
  word-break: break-word;
}

h1 {
  font-size: 40px
}

h2 {
  font-size: 32px
}

h3 {
  font-size: 24px
}

h4 {
  font-size: 18px
}

h5 {
  font-size: 18px
}

h6 {
  font-size: 18px
}

@media only screen and (max-device-width: 480px) {
  h1 {
    font-size: 30px
  }

  h2 {
    font-size: 26px
  }

  h3 {
    font-size: 22px
  }

  h4 {
    font-size: 18px
  }

  h5 {
    font-size: 18px
  }

  h6 {
    font-size: 18px
  }
}

/* Inline code */
:not(pre) > code[class*="language-"] {
  font-size: .9em;
  padding: 3px 4px;
  background: #fafafa;
  margin: 0 2px;
  color: #0a0a0a;
  border-radius: 0;
}

pre[class*="language-"] {
  padding: 24px 36px;
  line-height: 1.4em;
  font-size: 13px;
}

@media only screen and (max-device-width: 480px) {
  pre[class*="language-"] {
    padding: 12px 18px;
    line-height: 1.4em;
    font-size: 12px;
    -webkit-font-smoothing: antialiased;
  }
}

code[class*="language-"] {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
  font-style: normal;
  color: #e0e0e0;
  white-space: pre-wrap;
  word-break: break-all;
}

hr {
  border: none;
  height: 1px;
  margin-top: 1rem;
  margin-bottom: 1rem;
  color: #0a0a0a; /* old IE */
  background-color: #0a0a0a; /* Modern Browsers */
}

.pocket-btn {
  display: inline-block;
}

.twitter-share-button,
.hatena-bookmark-button-frame {
  margin-bottom: 2px;
}

.fb_iframe_widget span {
  margin-bottom: 6px;
}

@media only screen and (max-device-width: 480px) {
  .fb_iframe_widget span {
    margin-bottom: 5px;
  }
}

.twitter-share-button,
.hatena-bookmark-button-frame,
.fb_iframe_widget,
.pocket-btn {
  margin-right: 4px;
}

blockquote {
  margin-left: 0;
  margin-right: 0;
  font-size: 0.9rem;
  color: #666;
  font-style: italic;
  padding-left: .5rem;
  border-left: 3px solid #aaa;
}

blockquote > p {
  line-height: 1.4em;
}

